# udp_rev_kt_ffmpeg

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BaseChannel.h  CMakeLists.txt  H264Player.cpp  H264Player.h  JNICallbackHelper.cpp  JNICallbackHelper.h  UDP_Receiver.cpp  UDP_Receiver.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h  user_comm.h  util.h
app/src/main/java/com/wulala/myapplicationffmpegplayer/: KTPlayer.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
